Reworked getting a reforge for an item